--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Karla:wght@500;700&display=swap");
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  margin: 0;
+  /* font-family: "Inter", sans-serif; */
+  font-family: "Karla", sans-serif;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+  padding: 20px;
+  height: 65px;
+  color: #fff;
+}
+
+.nav--image {
+  height: 100%;
+  margin-right: 5px;
+}
+
+.nav--title {
+  margin-right: auto;
+  font-size: 1.25rem;
+}
+
+.nav--project {
+  font-size: 1rem;
+  font-weight: 500;
 }
