--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,9 @@ nav {
   height: 65px;
   color: #fff;
 }
+main {
+  padding: 36px;
+}
 
 /*! navbar or header */
 .nav--image {
@@ -33,4 +36,29 @@ nav {
 .nav--project {
   font-size: 1rem;
   font-weight: 500;
+}
+
+/* form component */
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  grid-gap: 30px;
+}
+
+.form--input {
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  text-indent: 5px;
+  border: 1px solid #d5d4d8;
+}
+
+.form--button {
+  grid-column: 1 / -1;
+  border: none;
+  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+  color: white;
+  cursor: pointer;
+  font-family: "Karla", sans-serif;
+  font-weight: 700;
+  border-radius: 5px;
 }
