--- a/src/index.css
+++ b/src/index.css
@@ -38,21 +38,21 @@ main {
   font-weight: 500;
 }
 
-/* form component */
-.form {
+/* meme component */
+.meme {
   display: grid;
   grid-template: 40px 40px / 1fr 1fr;
   grid-gap: 30px;
 }
 
-.form--input {
+.meme--input {
   font-family: "Karla", sans-serif;
   border-radius: 5px;
   text-indent: 5px;
   border: 1px solid #d5d4d8;
 }
 
-.form--button {
+.meme--button {
   grid-column: 1 / -1;
   border: none;
   background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
@@ -61,4 +61,8 @@ main {
   font-family: "Karla", sans-serif;
   font-weight: 700;
   border-radius: 5px;
+}
+
+.meme--image {
+  max-width: 100%;
 }
