--- a/src/index.css
+++ b/src/index.css
@@ -38,32 +38,64 @@ main {
   font-weight: 500;
 }
 
-/* meme component */
-.meme {
+/* form */
+
+.form {
   display: grid;
   grid-template: 40px 40px / 1fr 1fr;
-  grid-gap: 30px;
+  gap: 17px;
+  margin-bottom: 17px;
 }
 
-.meme--input {
+.form--input {
   font-family: "Karla", sans-serif;
   border-radius: 5px;
-  text-indent: 5px;
   border: 1px solid #d5d4d8;
+  text-indent: 5px;
 }
 
-.meme--button {
+.form--button {
   grid-column: 1 / -1;
-  border: none;
-  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
-  color: white;
-  cursor: pointer;
   font-family: "Karla", sans-serif;
-  font-weight: 700;
   border-radius: 5px;
+  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+/* meme component */
+.meme {
+  position: relative;
 }
 
 .meme--image {
-  max-width: 100%;
+  min-width: 100%;
   border-radius: 3px;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
